--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
 
+    // LiveStream
+    implementation 'dev.shreyaspatil:LiveStream-kt:0.1'
+
     // Android
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
@@ -45,5 +48,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation project(path: ':livestream-kt')
+//    implementation project(path: ':livestream-kt')
 }
