Updated docs to GFM

--- a/livestream-kt/build.gradle
+++ b/livestream-kt/build.gradle
@@ -28,7 +28,7 @@ android {
     }
 
     dokka {
-        outputFormat = 'jekyll'
+        outputFormat = 'gfm'
         outputDirectory = "docs/"
     }
 }
