Updated docs to HTML format

--- a/livestream-kt/build.gradle
+++ b/livestream-kt/build.gradle
@@ -28,7 +28,7 @@ android {
     }
 
     dokka {
-        outputFormat = 'gfm'
+        outputFormat = 'html'
         outputDirectory = "docs/"
     }
 }
