--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run Gradle command
-      uses: Raul6469/android-gradle-action@2.0.0
+    - uses: actions/checkout@v1
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        # The gradle command you wish to run (required)
-        # Here, `./gradlew test` will be run
-        script: test
+        java-version: 1.8
+    - name: Grant Permission to Execute
+      run: chmod +x build.gradle
+    - name: Build with Gradle
+      env:
+        bintrayUser: ${{ secrets.BINTRAY_USER }}
+        bintrayApiKey: ${{ secrets.BINTRAY_API_KEY }}
+      run: ./gradlew bintrayUpload
