--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant Permission to Execute
-      run: chmod +x build.gradle
+      run: chmod +x gradlew
     - name: Build with Gradle
       env:
         bintrayUser: ${{ secrets.BINTRAY_USER }}
