--- a/livestream-kt/build.gradle
+++ b/livestream-kt/build.gradle
@@ -156,7 +156,7 @@ bintray {
         version {
             gpg {
                 sign = true //Determines whether to GPG sign the files. The default is false
-                passphrase = properties.getProperty("bintray.gpg.password") //Optional. The passphrase for GPG signing'
+                passphrase = ""
             }
         }
     }
